horizontal scroll fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,3 +22,12 @@ li {
   right: -1.5rem;
 }
  
+/* Hide scrollbar */
+.scrollContainer::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollContainer {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
